feat(domain): implement win condition abstraction pattern (Priority 11)
Replace static list win condition modifiers with evaluator-bound modifiers
to eliminate memory leaks and centralize role result messaging.

Architecture:
- Created WinConditionModifier interface supporting blocking and alternative wins
- Enhanced WinConditionEvaluator with instance-scoped modifier registration
- Migrated SuperHunterRole to new modifier pattern
- Removed legacy IHunterWinConditionModifier interface and static list
- Centralized role result messaging in EndGameSaga

Implementation:
- WinConditionModifier: allowsWin() for blocking, getAlternativeWin() for alternatives
- Evaluator applies AND logic: any modifier can block a win
- SuperHunterRole blocks hunter wins until 3-kill threshold met
- EndGameSaga broadcasts win/loss for each player with role information
- Session-scoped lifecycle prevents memory leaks

Technical:
- Java 8 compatibility maintained throughout
- Added GameSession.getWinConditionEvaluator() for modifier registration
- Implemented AManhuntRole.getRoleIdentifier() across all 18 roles
- Replaced Java 9+ collection APIs with Java 8 equivalents
- 18+ tests covering unit and integration scenarios

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>