@@ -4,6 +4,8 @@ import me.flamboyant.manhunt.domain.game.GameSessionId;
 import me.flamboyant.manhunt.domain.role.definition.ManhuntRoleIdentifier;
 import org.bukkit.entity.Player;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 public class RolesDistributedEvent extends DomainEvent {
@@ -11,7 +13,7 @@ public class RolesDistributedEvent extends DomainEvent {
 
     public RolesDistributedEvent(GameSessionId sessionId, Map<Player, ManhuntRoleIdentifier> assignments) {
         super(sessionId);
-        this.assignments = Map.copyOf(assignments);
+        this.assignments = Collections.unmodifiableMap(new HashMap<>(assignments));
     }
 
     public Map<Player, ManhuntRoleIdentifier> getAssignments() {
